Fix OpenAPI class generation.
Signed-off-by: Franz Wilhelmstötter <franz.wilhelmstoetter@gmail.com>